# model-kernels

./: .gitmodules  README.md
attention_int8_cuda/: attention_int8.cu
docs/: DESIGN.md  MATH_REFERENCE.md
kernels/attention_int8/: INDEX.md  PERFORMANCE_ANALYSIS.md  PYTORCH_INTEGRATION.md  attention_int8.cu  build.toml  flake.nix  pyproject.toml  setup.py
kernels/attention_int8/tests/: test_attention_int8.py
kernels/attention_int8/torch-ext/: __init__.py  torch_binding.cpp
kernels/attention_int8/torch-ext/attention_int8/: __init__.py  torch_binding.cpp
torch-ext/: torch_binding.cpp  torch_binding.h
torch-ext/attention_int8/: __init__.py
video_kernels/attention_int8/: Makefile  README.md  setup.py
