[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attention-int8-kernel"
version = "0.1.0"
description = "Timestep-aware INT8 attention CUDA kernel for diffusion transformers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
diffusers = [
    "diffusers>=0.25.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["attention_int8*"]